  getWrapper is renamed to appWrappers, getSWrapper to appSWrappers;

* Inductive definitions now handle disjunctive premises correctly (HOL and ZF)


*** HOL ***

* new force_tac (and its derivations Force_tac, force) 
  combines rewriting and classical reasoning (and whatever other tools)
  similarly to auto_tac, but is aimed to solve the given subgoal totally.

* added option_map_eq_Some to simpset(), option_map_eq_Some RS iffD1 to claset()
* New directory HOL/UNITY: Chandy and Misra's UNITY formalism

* split_all_tac is now much faster and fails if there is nothing to split.
  Existing (fragile) proofs may require adaption because the order and the
  names of the automatically generated variables have changed.
  split_all_tac has moved within claset() from usafe wrappers to safe wrappers,
  which means that !!-bound variables are splitted much more aggressively.
  If this splitting is not appropriate, use delSWrapper "split_all_tac".

* added disj_not1 = "(~P | Q) = (P --> Q)" to the default simpset

* HOL/Arithmetic
  
  - removed 'pred' (predecessor) function

  - generalized some theorems about n-1

  - Many new laws about "div" and "mod"

  - New laws about greatest common divisors (see theory ex/Primes)

* HOL/Relation: renamed the relational operatotr r^-1 "converse" instead of
  "inverse"

* recdef can now declare non-recursive functions, with {} supplied as the 
  well-founded relation

* Simplifier:

 -Rewrite rules for case distinctions can now be added permanently to the
  default simpset using Addsplits just like Addsimps. They can be removed via
  Delsplits just like Delsimps. Lower-case versions are also available.

 -The rule expand_if is now part of the default simpset. This means that
  the simplifier will eliminate all ocurrences of if-then-else in the
  conclusion of a goal. To prevent this, you can either remove expand_if
  completely from the default simpset by `Delsplits [expand_if]' or